--- a/exp1/js.html
+++ b/exp1/js.html
@@ -8,10 +8,10 @@
 	</head>
 	<body>
         <form>
-            a: <input type="text" id="a"/><br>
-            b: <input type="text" id="b"/><br>
-            c: <input type="text" id="c"/><br>
-            <input type="button" value="计算" onclick="root()"/><br>
+            a: <input type="text" id="a"/><br/>
+            b: <input type="text" id="b"/><br/>
+            c: <input type="text" id="c"/><br/>
+            <input type="button" value="计算" onclick="root()"/><br/>
             <p id="root1" />
             <p id="root2" />
         </form>
